@@ -246,7 +246,7 @@ gpointer execute_script(gpointer p) {
 	fclose(fp);
 	com.script = FALSE;
 	/* Now we want to restore the saved cwd */
-	changedir(saved_cwd, NULL);
+	siril_change_dir(saved_cwd, NULL);
 	writeinitfile();
 	siril_add_idle(end_script, NULL);
 	if (!retval) {
@@ -362,6 +362,7 @@ int processcommand(const char *line) {
 	return 0;
 }
 
+// loads the sequence from com.wd
 sequence *load_sequence(const char *name, char **get_filename) {
 	gchar *file = g_strdup(name);
 	gchar *altfile = NULL;
