@@ -10,6 +10,7 @@ siril 1.0.0
 * New linear match function
 * New link command to create symbolic links
 * New convert command to convert all files (and link FITS)
+* New merge command
 * New preference entries for FITS compression settings (Fabrice Faure)
 * New native image format: 32-bit floating point image
 * New native sequence format: FITS sequence in a single image
